Adding to the TODO repo in github 7 th time

--- a/index.html.html
+++ b/index.html.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Simple To-Do App </title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='todo.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <body>
     <div class="container">
         <h1>To-Do List</h1>
@@ -14,6 +14,6 @@
         <ul id="tasks"></ul>
     </div>
     </body>
-    <script src='todo.js'></script>
+    <script src='script.js'></script>
 </head>
 </html>
